fixed scrollbars AGAIN

--- a/css/gracket.css
+++ b/css/gracket.css
@@ -66,7 +66,7 @@ body > h3 p, .container-secondary > h3 > p {
   padding: 55px 15px 5px;
   line-height: 100%;
   position: relative;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .g_round {
@@ -132,7 +132,7 @@ body > h3 p, .container-secondary > h3 > p {
 .container-secondary {
   margin-top: 30px;
   position: relative;
-  overflow: scroll;
+  /*overflow: auto;*/
   width: 100%;
 }
 
@@ -219,3 +219,5 @@ td {
 .love a:hover {
   text-decoration: underline;
 }
+
+
